Twenty Fifteen: correct image alignment for RTL.
Props iamtakashi, fixes #30239.



Built from https://develop.svn.wordpress.org/trunk@30222


git-svn-id: http://core.svn.wordpress.org/trunk@30222 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyfifteen/rtl.css
+++ b/wp-content/themes/twentyfifteen/rtl.css
@@ -267,6 +267,13 @@ img.alignleft {
 	content: "\f430";
 }
 
+.entry-content a,
+.entry-summary a,
+.page-content a,
+.comment-content a {
+	display: inline;
+}
+
 .author-link:after {
 	content: "\f430";
 }
